--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,20 +1,11 @@
 # Authors
 
-billy_rick:
-  name: Billy Rick
-  web: http://thewhip.com
-  email: billy@rick.com
-  bio: "What do you want, jewels? I am a very extravagant man."
-  avatar: bio-photo-2.jpg
-  twitter: extravagantman
-  google:
-    plus: BillyRick
-
-cornelius_fiddlebone:
-  name: Cornelius Fiddlebone
-  email: cornelius@thewhip.com
-  bio: "I ordered what?"
+rajjan:
+  name: Rajjan Jeyaram Sangiah
+  web: http://rajjan.com
+  email: 
+  bio: "Software Engineer"
   avatar: bio-photo.jpg
-  twitter: rhymeswithsackit
+  twitter: RajjanJS
   google:
-    plus: CorneliusFiddlebone
+    plus: 
