--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ owner:
   facebook: RajjanJS
   google:
     plus: RajjanJS
-    analytics: 
+    analytics: 'UA-39057089-1'
     verify: 
     ad-client: 
     ad-slot: 
