--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 title:            Rajjan
 locale:           en_US
-url:              
+url:             http://pradeepnayak.in 
 
 
 # Jekyll configuration
